# snpe_ball

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/hexagon_test/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hexagon_test/: Hexagon.kt  MainActivity.kt  MyApp.kt
app/src/main/java/com/example/hexagon_test/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: CMakeLists.txt  CreateUserBuffer.cpp  CreateUserBuffer.hpp  LoadContainer.cpp  LoadContainer.hpp  LoadInputTensor.cpp  LoadInputTensor.hpp  PreprocessInput.cpp  PreprocessInput.hpp  SaveOutputTensor.cpp  SaveOutputTensor.hpp  SetBuilderOptions.cpp  SetBuilderOptions.hpp  Util.cpp  Util.hpp  hexagon.cpp  log.h
app/src/main/jni/include/SNPE/DlSystem/: UserMemoryMap.h  UserMemoryMap.hpp
app/src/main/jni/include/SNPE/SNPE/: RuntimeConfigList.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/hexagon_test/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
testdata/ball/: target_raw_list.txt
testdata/ball/scripts/: create_ball_raws.py  show_ball_result.py
testdata/inception_v3/: target_raw_list.txt
